Fixed topic page header bug on iOS & PWA

--- a/src/components/TopicPage/Header/Header.module.scss
+++ b/src/components/TopicPage/Header/Header.module.scss
@@ -5,7 +5,6 @@
 
 
 #header {
-	margin-top: env(safe-area-inset-top);
 	height: 4rem;
 	padding-left: calc(0 + env(safe-area-inset-left));
 	padding-right: calc(0 + env(safe-area-inset-right));
